[tool.poetry]
name = "twilio-call"
version = "0.1.0"
description = ""
authors = ["Nguyen-Quy <96980131+Nguyen-Quy@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
twilio = "^8.2.2"
flask = "^2.3.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
